--- a/Config/fletching.cfg
+++ b/Config/fletching.cfg
@@ -4,7 +4,7 @@
     <script>
       [
         {
-          "Id": 3099,
+          "Id": gisticon,
           "Title": "War Commander"
         }
       ]
